Docker and separate paste for ino code

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <h1>Integraçao Metereologica</h1>
+    <h1>Controle Varal Automatico</h1>
   <script src="main.js"></script>
 
   <div id="botoes">
@@ -20,6 +20,6 @@
   </div>
 
 
-  <footer id="creditos">Instituto Federal Fluminense, Varal Automatico ©℗®™</footer>
+  <footer id="creditos">Instituto Federal Fluminense, Varal Automatico </footer>
 </body>
 </html>
