--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
 
     <h1>Controle Varal Automatico</h1>
-  <script src="main.js"></script>
+  <script src="main/main.js"></script>
 
   <div id="botoes">
     
-    <button class="slide_from_left" id="Retrair" value="retraindo!" >RETRAIR</button>
-    <button class="slide_from_left" id="Expor" value="expondo!" ">EXPOR</button>
-  </div>
+    <button class="slide_from_left" id="Retrair" value="retraindo!" onclick="Retrair()">RETRAIR</button>
+    <button class="slide_from_left" id="Expor" value="expondo!" onclick="Expor()">EXPOR</button>
+    <button class="slide_from_left" id="Automatico" value="automatico" onclick="Automatico()">MODO AUTOMATICO</button></div>
 
 
   <footer id="creditos">Instituto Federal Fluminense, Varal Automatico </footer>
