--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
         
     <button class="slide_from_left" id="Retrair" value="retraindo!" onclick="Retrair()" >RETRAIR</button>
     <button class="slide_from_left" id="Expor" value="expondo!" onclick="Expor()">EXPOR</button>
-    <button class="slide_from_left" id="Automatico" value="automatico" onclick="Automatico()">MODO AUTOMATICO</button></div>
+    <button class="slide_from_left" id="Automatico" value="automatico" onclick="Automatico()">MODO AUTOMATICO</button>
+  </div>
 
 
-  <footer id="creditos">Instituto Federal Fluminense, Varal Automatico </footer>
+  
 </body>
 </html>
